--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/index.ts",
+    "build": "parcel build src/index.ts && tsc",
     "test": "jest"
   },
   "author": { 
